<resources>
    <string name="app_name">Budometer</string>
    <string name="notes">Notes:</string>
    <string name="crop_id">Crop id:</string>
    <string name="strain">Strain:</string>
    <string name="date">Date:</string>
    <string name="chart">Chart</string>
    <string name="input">Input</string>
    <string name="week_7">Week 7</string>
    <string name="maturing">Maturing</string>
    <string name="under_50">Under 50%</string>
    <string name="fully_wilted">Fully Wilted</string>
    <string name="_50_70">50%-70%</string>
    <string name="amber">Amber</string>
    <string name="foggy">Foggy</string>
    <string name="clear">Clear</string>
    <string name="wilting_tips">Wilting Tips</string>
    <string name="vigorous">Vigorous</string>
    <string name="growing">Growing</string>
    <string name="full_maturity">Full Maturity</string>
    <string name="_90">90% +</string>
    <string name="week_5">Week 5</string>
    <string name="week_9">Week 9</string>
    <string name="capture">Capture</string>
    <string name="preview">Preview</string>
    <string name="folders_page">Folders</string>
    <string name="folder_selected_page">Folder Selected</string>
    <string name="help_section_title_expand_button">Expanding Menu Button</string>
    <string name="help_button_image_title">Help Button</string>
    <string name="help_section_title_navigation_menu">Navigation Menu</string>
    <string name="help_section_title_chart_button">Chart</string>
    <string name="help_section_title_image_gallery_button">Gallery</string>
    <string name="help_section_title_carousel_button">Archive</string>
    <string name="help_section_title_help_button">Help</string>
    <string name="help_section_title_camera_button">Camera</string>
    <string name="help_section_title_crop_button">Image Cropping</string>
    <string name="help_section_title_harvesting_marijuana">Harvesting marijuana</string>
    <string name="help_section_title_pistil_color">Pistil Color:</string>
    <string name="help_section_title_pistil_vigor">Pistil Curling:</string>
    <string name="help_section_title_trichomes_color">Trichome Color:</string>
    <string name="help_section_title_bud_density">Bud Density:</string>
    <string name="help_section_title_leaf_color">Leaf Curling &amp; Coloration:</string>
    <string name="help_section_description_expand_button">Click to reveal/conceal the navigation menu.</string>
    <string name="help_section_description_navigation_menu">The navigation menu contains an assortment of buttons used to navigate within the app. Instructions for the usage of each navigation button are
       provided on the proceeding help pages.</string>
    <string name="help_section_description_navigation_menu_first_use">The navigation menu contains an assortment of buttons used to navigate within the app.</string>
    <string name="help_section_description_help_button_first_use">*IMPORTANT* Read the help pages \nbefore first use. Click the purple button to access the help pages. Instructions for \nthe usage of each \nnavigation button are provided on the help pages.</string>
    <string name="help_section_description_camera_button_1">After installing the Budometer app you will need to take some pictures of the buds you want to analyze.</string>
    <string name="help_section_description_camera_button_2">Budometer requires that photographs be taken from a close-up vantage point and in the manner described below.</string>
    <string name="help_description_start_the_camera">Click the camera icon in the navigation menu to start the camera.</string>
    <string name="help_description_camera_placement_photo_capture_1">(1) Position the camera close to the bud as indicated by the red outline.</string>
    <string name="help_description_camera_placement_photo_capture_2">It\'s important that the photo contains bud only without background showing around the edges.</string>
    <string name="help_description_click_capture">(3) Click the large center button to capture the image.</string>
    <string name="help_description_camera_flash_setting">(4) Click to change the camera\'s flash setting.</string>
    <string name="help_description_camera_front_rear">(2) Toggles between the front-facing and rear-facing cameras.</string>
    <string name="help_description_camera_display_image_preview">The captured image will be displayed on the camera\'s image preview page.</string>
    <string name="help_description_camera_save_image_1">(6) Click to save the image.</string>
    <string name="help_description_camera_save_image_2">Saved images are saved to the folder labeled \'Budometer\' located inside the \'Pictures\' directory.</string>
    <string name="help_description_camera_retake">(5) Click to discard the current image and take a new photo.</string>
    <string name="help_description_gallery_main_1">Images captured using the camera are accessible through the image gallery.</string>
    <string name="help_description_gallery_main_2">To run an analysis start by selecting four images from the gallery.</string>
    <string name="help_description_gallery_open">Click the gallery menu button to open the gallery folder page.</string>
    <string name="help_description_gallery_open_folder">To access images in a specific folder tap the folder icon.</string>
    <string name="help_description_gallery_select_images">Select four images then click the green \'pie chart\' menu button to begin analyzing.</string>
    <string name="help_description_gallery_results_displayed">Analysis of the images will take a few seconds before the results are displayed.</string>
    <string name="help_description_chart_main">Information resulting from the completion of analysis is displayed for the user and conveys a variety of facts about the plants in the analyzed photographs. The diagrams below describe the results interface and the information displayed.</string>
    <string name="help_description_chart_four_images_used">(1) Shows the four images used in this analysis.</string>
    <string name="help_description_chart_pie_chart">(2) A pie chart displaying all colors and shades extracted from the images.</string>
    <string name="help_description_chart_pie_chart_percentage_values">(3) Values indicating what percentage of the image each specific color shade represents.</string>
    <string name="help_description_chart_color_bar_1">(4) A color bar that displays values indicating what percentage of the image each group of color shades represents.</string>
    <string name="help_description_chart_color_bar_2">For example, all shades of purple combined make up 3.9% of the image color.</string>
    <string name="help_description_chart_close_button">(5) Close button, when clicked exits the results page.</string>
    <string name="help_description_chart_save_button">(6) Save button, when clicked saves the current analysis results for later viewing.</string>
    <string name="help_description_chart_result_text_1">(7) Text indicating if plants are ready to harvest or if they are still growing as determined by machine learning algorithms.</string>
    <string name="help_description_chart_result_text_2">This information is automatically displayed by the software at the conclusion of an analysis.</string>
    <string name="help_description_chart_pistil_percent">(8) Text indicating the percentage of pistils that have turned orange/brown, wilted, and curled.</string>
    <string name="help_description_chart_strain_1">(9) Text showing the strain of cannabis represented in the analyzed photos.</string>
    <string name="help_description_chart_strain_2">This information is user input, entering the cannabis strain is optional.</string>
    <string name="help_description_chart_crop_id_1">(10) Crop id, archived analysis readings are grouped according to the crop or plant from which they were taken and therefore each reading must have a crop/plant identifier.</string>
    <string name="help_description_chart_crop_id_2">This information is user input, entering the crop id is required to save the reading.</string>
    <string name="help_description_chart_date_1">(11) Text stating the date that the analysis was performed.</string>
    <string name="help_description_chart_date_2">This information is automatically displayed by the software at the conclusion of an analysis.</string>
    <string name="help_description_chart_notes">(12) A text view that allows users to enter notes for later reference.</string>
    <string name="help_description_crop_main">Budometer\'s image cropping tool can be used
       to trim off unwanted background colors along the image edges.</string>
    <string name="help_description_crop_1">(1) Navigate to the gallery.</string>
    <string name="help_description_crop_2">(2) Select the folder containing the image.</string>
    <string name="help_description_crop_3">(3) Select an image.</string>
    <string name="help_description_crop_4">(4) Click expanding menu button to reveal the navigation menu.</string>
    <string name="help_description_crop_5">(5) Clicking the yellow crop image button opens the selected image in the image cropping tool.</string>
    <string name="help_description_crop_6">(6) Resize and reposition the cropping guide so that the section of image inside the guide represents the image that you would like to keep.</string>
    <string name="help_description_crop_7">(7) Clicking the crop image button crops the image, saves the edited version to the gallery, refreshes the gallery, and exits the cropping tool.</string>
    <string name="gallery">Gallery</string>
    <string name="cropping_tool">Cropping Tool</string>
    <string name="help_description_carousel_main">Archived analysis readings are grouped according to the crop or plant from which they were taken. Each reading includes all information and user input from the original analysis and displays it in an organized and easy to navigate user interface.</string>
    <string name="plant_crop_readings">Readings</string>
    <string name="plants_crops">Plants/Crops</string>
    <string name="saved_input">Saved Input</string>
    <string name="help_description_vertical_scroll">All archived readings for a single crop or plant are displayed in a list that scrolls vertically as shown by the image labeled \'Plant/Crop Readings\'.</string>
    <string name="help_description_carousel_list_header_1">(1) List header, the first entry in every collection of
       previous reading is a header.</string>
    <string name="help_description_carousel_close_button">(6) Close button, when clicked exits the results page.</string>
    <string name="content_description_background_image">Background image</string>
    <string name="content_description_result_image">Result image</string>
    <string name="content_description_crop_button_background">Crop button</string>
    <string name="content_description_cancel_button_background">Cancel button</string>
    <string name="content_description_save_button_background">Save button</string>
    <string name="content_description_next_button_background">Next button</string>
    <string name="content_description_previous_button_background">Back button</string>
    <string name="transition_avatar_border" translatable="false">avatar_border</string>
    <string name="transition_card" translatable="false">card</string>
    <string name="transition_background" translatable="false">background</string>
    <string name="details_close">CLOSE</string>
    <string name="button_finish">Finish</string>
    <string name="crop">CROP</string>
    <string name="save">SAVE</string>
    <string name="result">Result:</string>
    <string name="_0_0">0.0%</string>
    <string name="close">CLOSE</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
</resources>