<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_4"
    android:orientation="vertical"
    android:weightSum="2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <com.edmodo.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/pad30dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/cropImageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/cropImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad60dp"
        android:background="@color/transparent"
        android:contentDescription="@string/content_description_crop_button_background"
        android:scaleType="fitXY"
        android:src="@drawable/ic_crop_white_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/closeImageButton"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/cropImageButtonLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crop"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/txt14sp"
        app:layout_constraintLeft_toLeftOf="@+id/cropImageButton"
        app:layout_constraintRight_toRightOf="@+id/cropImageButton"
        app:layout_constraintTop_toBottomOf="@+id/cropImageButton" />

    <ImageButton
        android:id="@+id/closeImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad60dp"
        android:background="@color/transparent"
        android:contentDescription="@string/content_description_crop_button_background"
        android:scaleType="fitXY"
        android:src="@drawable/ic_close_white_48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cropImageButton" />

    <TextView
        android:id="@+id/closeImageButtonLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/txt14sp"
        app:layout_constraintLeft_toLeftOf="@+id/closeImageButton"
        app:layout_constraintRight_toRightOf="@+id/closeImageButton"
        app:layout_constraintTop_toBottomOf="@+id/closeImageButton" />
</androidx.constraintlayout.widget.ConstraintLayout>